# ai-based-api-workflow-auditor-framework

./: .gitignore  CODEX_HANDOFF.md  LICENSE  Makefile  README.md  SECURITY.md  instruction.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260320_0001_initial_schema.py  20260320_0002_service_accounts.py  20260320_0003_verifier_runs_and_context.py  20260320_0004_verifier_jobs.py  20260320_0005_replay_artifacts.py  20260320_0006_replay_artifact_retention.py  20260320_0007_scan_artifacts.py  20260320_0008_planning_runs.py  20260320_0009_callbacks.py  20260320_0010_orchestration_sessions.py  20260320_0011_orchestration_hypotheses.py  20260320_0012_hypothesis_lifecycle_fields.py  20260320_0013_scan_runtime_setup.py  20260320_0014_ai_provider_auth.py
backend/api/: README.md
backend/api/app/: __init__.py  config.py  database.py  db_models.py  main.py  security.py
backend/orchestrator/: README.md  __init__.py
backend/proxy/: README.md  __init__.py
backend/tests/: conftest.py  test_admin_and_reports_api.py  test_ai_auth_api.py  test_ai_planner_api.py  test_ai_provider_service.py  test_artifacts_and_ai_api.py  test_findings_api.py  test_hypothesis_lifecycle.py  test_orchestration_api.py  test_payload_library.py  test_planner_api.py  test_producer_contracts_api.py  test_proxy_runtime_ingest.py  test_scan_setup_api.py  test_verifier_jobs_api.py  test_verifier_runtime_service.py  test_verifier_worker.py  test_vulnerability_rules.py  test_workflow_worker.py
backend/tools/: README.md  __init__.py
(+148 files in other folders)
