[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-workflow-auditor-backend"
version = "0.1.0"
description = "FastAPI control plane for the AI-based API workflow auditor framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=43.0,<45.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pyyaml>=6.0,<7.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "alembic>=1.16,<2.0",
  "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "proxy*", "tools*", "orchestrator*"]
